Fixed styling issue on mobile view with banner text.

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -254,3 +254,9 @@ body {
         margin:0;
     }
 }
+
+@media (max-width: 502px) {
+    .banner h1 {
+        position:static;
+    }
+}
